# NFL-FUNFACT-BOT

./: .gitignore  LICENSE  NFL-FUNFACT-BOT.cabal  README.md  stack.yaml
app/: Main.hs
src/: Bot.hs  LogFilePaths.hs
src/botData/: bearsFacts.md  bengalsFacts.md  billsFacts.md  broncosFacts.md  brownsFacts.md  buccaneersFacts.md  cardinalsFacts.md  chargersFacts.md  chiefsFacts.md  coltsFacts.md  cowboysFacts.md  dolphinsFacts.md  eaglesFacts.md  falconsFacts.md  genFacts.md  giantsFacts.md  inputLog.md  jaguarsFacts.md  jetsFacts.md  lionsFacts.md  ninersFacts.md  packersFacts.md  panthersFacts.md  patriotsFacts.md  raidersFacts.md  ramsFacts.md  ravensFacts.md  redskinsFacts.md  saintsFacts.md  seahawksFacts.md  steelersFacts.md  texansFacts.md  titansFacts.md  vikingsFacts.md
